Modify build.sbt and plugins.sbt