@@ -1,21 +1,40 @@
 // Your sbt build file. Guides on how to write one can be found at
 // http://www.scala-sbt.org/0.13/docs/index.html
 
-scalaVersion := "2.10.4"
+scalaVersion := "2.10.5"
 
-sparkVersion := "1.4.0"
+sparkVersion := "1.6.0"
+
+crossScalaVersions := Seq("2.10.5", "2.11.7")
 
 spName := "yu-iskw/click-through-rate-prediction"
 
 // Don't forget to set the version
 version := "0.0.1"
 
+spAppendScalaVersion := true
+
+spIncludeMaven := true
+
+spIgnoreProvided := true
+
+// Can't parallelly execute in test
+parallelExecution in Test := false
+
+fork in Test := true
+
+javaOptions ++= Seq("-Xmx2G", "-XX:MaxPermSize=256m")
+
 // All Spark Packages need a license
 licenses := Seq("Apache-2.0" -> url("http://opensource.org/licenses/Apache-2.0"))
 
-
 // Add Spark components this package depends on, e.g, "mllib", ....
-// sparkComponents ++= Seq("sql", "mllib")
+sparkComponents ++= Seq("sql", "mllib")
+
+libraryDependencies ++= Seq(
+  "org.scalatest" %% "scalatest" % "2.1.5" % "test"
+)
+
 
 // uncomment and change the value below to change the directory where your zip artifact will be created
 // spDistDirectory := target.value
